<!--
    Kevin Santizo n01382533 Section B
    (Alex) Narendre Ramdhan n01240746 Section B
    Samad Agha n01364908 Section B
    Henry To n01365792 Section B -->
<resources>
    <string name="app_name">SmartProstheticArm</string>
    <string name="title_home">Status</string>
    <string name="title_sensors">Sensors</string>
    <string name="title_bt">Arm Controller</string>
    <string name="Dialog_Exit">Are you sure you want to exit?</string>
    <string name="OnBack_Close">Yes</string>
    <string name="onBack_No">No</string>
    <string name="About">About</string>
    <string name="title_settings">Settings</string>
    <string name="ultrasonic_readings">Object Distance</string>
    <string name="servos_information">Servos Information</string>
    <string name="temperature_readings">Temperature</string>
    <string name="BTGranted">Bluetooth access granted!</string>
    <string name="BTDenied">Bluetooth access denied!</string>
    <string name="smart_prosthetic_arm">Smart Prosthetic Arm</string>
    <string name="full_name"> Full Name</string>
    <string name="age"> Age</string>
    <string name="email"> Email</string>
    <string name="password"> Password</string>
    <string name="create_an_account">Create an Account</string>
    <string name="register">Register</string>
    <string name="appicon">AppIcon</string>
    <string name="submitted">Password reset has been sent to email</string>
    <string name="object_distance">Object Distance</string>
    <string name="get_distance_of_object">Get Distance of Object</string>
    <string name="measurements">Distance of object (in cm):</string>
    <string name="temp_readings">Temperature Readings</string>
    <string name="temp_reading">0°</string>
    <string name="get_temperature_measurements">Get Temperature Measurements</string>
    <string name="sensor_information">Sensor Information</string>
    <string name="nameRequired">Name is required</string>
    <string name="emailInvalid">Email is invalid</string>
    <string name="phoneReq">Phone is required</string>
    <string name="passMin">"Password must be more than 6 characters"</string>
    <string name="Dialog_Exit2">Are you sure you want to sign out?</string>
    <string name="phoneRequired">Phone is required</string>
    <string name="Reviewsent">Feedback sent</string>
    <string name="feedback_comment">How can we improve?</string>
    <string name="log_loginbtn">Login</string>
    <string name="login_logacc">Login to your Account</string>
    <string name="login_register">Register</string>
    <string name="login_forgorpass">Forgot Password</string>
    <string name="help_title">Help</string>
    <string name="help_msgbox">If you need assistance with your Smart Prosthetic Arm device, please contact us by tapping the telephone or email icon below. Our telephone is open 24/7 toll free with friendly agents willing to help you out.</string>
    <string name="users_title">Current User Selections</string>
    <string name="user_selections">View User Selections</string>
    <string name="review_title">Write a review</string>
    <string name="feedback_label">Feedback</string>
    <string name="set_username">Set username</string>
    <string name="profile_summary">Set profile username</string>
    <string name="PROFILE_TITLE">USER PROFILE</string>
    <string name="screen_title">SCREEN ORIENTATION</string>
    <string name="orientation_list">Orientation</string>
    <string name="reset_passwordlabel">Account</string>
    <string name="Resetpassword">Reset Password</string>
    <string name="emailReq">Email is required</string>
    <string name="validEmail">Please provide a valid email</string>
    <string name="dialnum" translatable="false">tel:9058746663</string>
    <string name="plain" translatable="false">text/plain</string>
    <string name="hybridAddress" translatable="false">hybridprosthetics@gmail.com</string>
    <string name="emailpro">Choose your email provider</string>
    <string name="sendEmail">Send Email</string>
    <string name="prefname" translatable="false">preffile</string>
    <string name="preffname" translatable="false">prefname</string>
    <string name="preffpass" translatable="false">prefpass</string>
    <string name="preffremember" translatable="false">prefremember</string>
    <string name="notfound" translatable="false">notfound</string>
    <string name="emailisreq">Email is required</string>
    <string name="emailIn">Email is invalid</string>
    <string name="passReq">Password is required</string>
    <string name="warningMsg">Warning</string>
    <string name="bt_title">Powered by Bluetooth</string>
    <string name="bt_manual">Manual Controls</string>
    <string name="bt_release">Release Object</string>
    <string name="bt_servospeed">Servo Speed</string>
    <string name="bt_grab">Grab</string>
    <string name="bt_connectbt">Connect</string>
    <string name="aboutscreen_title">About Us</string>
    <string name="aboutus_msg">The focus of Hybrid Prosthetics is to provide synthetic arms meant to benefit disabled individuals. This arm will have many functions, including temperature measurement, object detection, rotational axes (servos) and supports bluetooth/wireless connection. These functionalities will all be displayed to an app for the user to get all the information necessary to help with their everyday lives.</string>
    <string name="aboutus_msg2">Contact Information:  Email: Hybridprosthetics@gmail.com \nPhone number: 905 874 6663</string>
    <string name="forgot_enteremail">Please enter your email address</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_submit">Submit</string>
    <string name="forgot_leavescreen">Back</string>
    <string name="fragmentstatus_title">Status Overview</string>
    <string name="fragmentstatus_greeting">Welcome back,</string>
    <string name="fragmentstatus_bt" translatable="false">Bluetooth:</string>
    <string name="fragmentstatus_btdc">Disconnected</string>
    <string name="fragmentstatus_btcd">Connected</string>
    <string name="fragmentstatus_battery">Battery:</string>
    <string name="fragmentstatus_battery_disconnected">Disconnected</string>
    <string name="fragmentstatus_battery_connected">Connected</string>
    <string name="loginland_reg">Register</string>
    <string name="loginland_login">Login</string>
    <string name="loginland_forgotpass">Forgot Password</string>
    <string name="loginland_registerforacc">Register</string>
    <string name="loginland_logintoaccount">Login to your Account</string>
    <string name="remember_me">Remember me</string>
    <string name="temperatureicon">temperatureicon</string>
    <string name="sensoricon">sensoricon</string>
    <string name="mountains">mountains</string>
    <string name="send_user_preferences">Send User Preferences</string>
    <string name="get_users_preferences">Get Users Preferences</string>
    <string name="bt_fingerslider">Servo Motion</string>
    <string name="ls_forgot_email">Please enter your email address</string>
    <string name="ls_forgot_pass">Forgot Password?</string>
    <string name="ls_forgot_submit">Submit</string>
    <string name="ls_forgot_back">Back</string>
    <string name="userspath">Users</string>
    <string name="mountians">TODO</string>
    <string name="string_mountians">mountains</string>
    <string name="save_preferences">Save Preferences</string>
    <string name="title_Armcontroller">Arm Controller</string>
    <string name="sensorchild">sensor</string>
    <string name="temperaturechild">temperature</string>
    <string name="celsiussymbol">°C</string>
    <string name="readingchild">reading</string>
    <string name="unit_cm">cm</string>
    <string name="servo">servo</string>
    <string name="direction">Hand: </string>
    <string name="register_confirmpass">Confirm password</string>
    <string name="register_phone">Phone Number</string>
    <string name="temp_celsius">Temperature reading in celsius:</string>
    <string name="servo_land_release">Release Object</string>
    <string name="servo_land_servspeed">Servo Speed</string>
    <string name="servo_land_subtext">Manual Controls</string>
    <string name="bluetooth_land_title">Bluetooth</string>
    <string name="servo_land_grab">Grab</string>
    <string name="splash_maintext" translatable="false">Smart Prosthetic Arm</string>
    <string name="splash_subtext">Making your life smarter.</string>
    <string name="compose_email">Compose Email</string>
    <string name="email_to"> To:</string>
    <string name="email_subject">Subject:</string>
    <string name="email_message">Message:</string>
    <string name="email_send">send</string>
    <string name="mountains_desc">Mountains</string>
    <string name="enter_your_email_s_message_here">Enter your email\'s message here</string>
    <string name="defaultpercent">0%</string>
    <string name="defaultdegree">0°</string>
    <string name="Help_Menu">Help</string>
    <string name="feedback_title" translatable="false">Feedback Form</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="land_feedback_form">Feedback Form</string>
    <string name="land_feedback_email">Email</string>
    <string name="land_feedback_phonenumber">Phone number</string>
    <string name="land_review_fullname">Full name</string>
    <string name="land_review_submitbtn">Submit</string>
    <string name="instruction_title">Instruction Manual</string>
    <string name="instruction_subtext">If you are having trouble connecting to your Smart Prosthetic Arm device or using it, please follow the steps below.</string>
    <string name="instruction_bt">Bluetooth not connecting</string>
    <string name="instruction_bt_text">1. Turn the device off, wait 5 seconds and put it back on. The status LED will be blinking.</string>
    <string name="instruction_bt_Text2">2. Reopen the app and connect to bluetooth. When it connects, the LED will stay solid, indicating the connection was complete.</string>
    <string name="instruction_attach_step1">1. Attach the arm to your shoulder. Make sure the velcro is fit and snug, adjust accordingly.</string>
    <string name="instruction_attach_step2">2. Make sure not to touch any of the electronic components, as they are delicate and may result in the device failing.</string>
    <string name="instruction_attach_title">Attaching the arm properly</string>
    <string name="instruction_disclaimer">DISCLAIMER</string>
    <string name="instruction_disclaimer_warning">Smart Arm Prosthetics does not make any warranties about the completeness, reliability and accuracy of this information. Any action you take upon the information you find on this app (Smart Arm Prosthetics), is strictly at your own risk. Smart Arm Prosthetics will not be liable for any losses and/or damages in connection with the use of our app.</string>

    <!-- Preference Titles -->

    <!-- TODO: Remove or change this placeholder text -->
</resources>