<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/screen_title" app:icon="@drawable/outline_screen_lock_portrait_black_24dp">

        <ListPreference
            android:key="ORIENTATION"
            android:title="@string/orientation_list"
            android:entries="@array/orientation_name"
            android:entryValues="@array/orientation_val"

            />

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/alerts_title" android:icon="@drawable/outline_notifications_24">
        <SwitchPreference android:title="@string/emergency_alerts" android:key="ALERTS"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/reset_passwordlabel"
        android:icon="@drawable/accounticon24"

        >
        <Preference
            android:key="resetpassword"
            android:title="@string/Resetpassword"
            />
    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/feedback_label"
        android:icon="@drawable/ic_baseline_rate_review_24"

        >
        <Preference
            android:key="review"
            android:title="@string/review_title"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/user_selections"
        android:icon="@drawable/ic_baseline_rate_review_24"

        >
        <Preference
            android:key="usrSelections"
            android:title="@string/users_title"
            />
    </PreferenceCategory>

</PreferenceScreen>