<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sensors_back"
    tools:context=".AboutActivity">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/appicon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/about_logo"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/about_logo"
        android:layout_width="270dp"
        android:layout_height="81dp"
        android:fontFamily="@font/tripleta_font"
        android:text="@string/smart_prosthetic_arm"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083" />

    <TextView
        android:id="@+id/abouttitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:text="@string/aboutscreen_title"
        android:textColor="#0B0A0A"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/aboutustext"
        android:layout_width="376dp"
        android:layout_height="234dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/aboutus_msg"
        android:textColor="#534F4F"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/abouttitle" />

    <TextView
        android:id="@+id/about_contact"
        android:layout_width="374dp"
        android:layout_height="99dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="31dp"

        android:text="@string/aboutus_msg2"
        android:textColor="#534F4F"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutustext" />
</androidx.constraintlayout.widget.ConstraintLayout>